# genetic-algorithm-tsp

./: Cargo.toml  LICENSE
.github/workflows/: release.yml  show_performance.yml  unit_tests.yml
src/: distance_mat.rs  gen_traits.rs  lib.rs  main.rs  population.rs  route.rs  routes.rs  solution.rs  subsequence.rs  test_utils.rs  utils.rs
tests/: test_genetic.rs
tests/test-data/: distances.txt
