[package]
name = "genetic-algorithm-tsp"
version = "0.1.3"
edition = "2021"
authors = ["Tim Toebrock"]
license = "MIT"
description = """
Using genetic algorithms to solve Traveling salesman problems.
"""

[dependencies]
crossbeam-utils = "0.8.6"
fasthash = {git = "https://github.com/flier/rust-fasthash"}
genetic-algorithm-traits = "0.1.0"
rand = "0.8.4"

[profile.dev]
opt-level = 3
